--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
         <div class="hero-full-wrapper">
           <div class="text-content">
             <h1>Abhishek Gusain</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>Meet me. I am Abhishek Gusain a Devops Engineer Freelancer.</p>
           </div>
         </div>
       </div>
