--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="hero-full-wrapper">
           <div class="text-content">
             <h1>Abhishek Gusain</h1>
-            <p>Meet me. I am Abhishek Gusain a Devops Engineer Freelancer.</p>
+            <p>Meet me. I am Abhishek Gusain a Devops Engineer Freelancer from Graphic Era.</p>
           </div>
         </div>
       </div>
